// Vitest Snapshot v1

exports[`Home Test > button click 1`] = `
"<div>Home</div>
<h1>----2</h1>
<h2 class=\\"count\\">1</h2>
<h2>msg: hello world</h2>
<button class=\\"el-button el-button--primary btn\\" aria-disabled=\\"false\\" type=\\"button\\">
  <!--v-if--><span class=\\"\\">增加</span>
</button>"
`;

exports[`Home Test > should render 1`] = `
"<div>Home</div>
<h1>----0</h1>
<h2 class=\\"count\\">0</h2>
<h2>msg: hello world</h2>
<button class=\\"el-button el-button--primary btn\\" aria-disabled=\\"false\\" type=\\"button\\">
  <!--v-if--><span class=\\"\\">增加</span>
</button>"
`;
